gateway/rules.v4
# Generated by iptables-save v1.6.1 on Fri Oct 21 15:26:56 2022
*nat
:PREROUTING ACCEPT [136:8917]
:INPUT ACCEPT [131:8569]
:OUTPUT ACCEPT [3:202]
:POSTROUTING ACCEPT [3:202]
# MOM 1 IHM
-A PREROUTING -p tcp -m tcp --dport 15672 -j DNAT --to-destination 192.168.1.2:15672
# MOM 1
-A PREROUTING -p tcp -m tcp --dport 5672 -j DNAT --to-destination 192.168.1.2:5672
# MOM 2 IHM
-A PREROUTING -p tcp -m tcp --dport 15673 -j DNAT --to-destination 192.168.1.13:15672
# MOM 2
-A PREROUTING -p tcp -m tcp --dport 5673 -j DNAT --to-destination 192.168.1.13:5672
# Mongo
#-A PREROUTING -p tcp -m tcp --dport 27017 -j DNAT --to-destination 192.168.1.3:27017
# Mysql
-A PREROUTING -p tcp -m tcp --dport 3306 -j DNAT --to-destination 192.168.1.4:3306
# Redis
-A PREROUTING -p tcp -m tcp --dport 6379 -j DNAT --to-destination 192.168.1.6:6379

# Collector
-A PREROUTING -p tcp -m tcp --dport 8081 -j DNAT --to-destination 192.168.1.7:8081
# Notification Channel Manager
-A PREROUTING -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.1.12:8080
# User service
-A PREROUTING -p tcp -m tcp --dport 8088 -j DNAT --to-destination 192.168.1.11:8088

-A POSTROUTING -o ens192 -j MASQUERADE
-A POSTROUTING -d 192.168.1.2/32 -p tcp -m tcp --dport 15672 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.2/32 -p tcp -m tcp --dport 5672 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.13/32 -p tcp -m tcp --dport 5673 -j SNAT --to-source 192.168.1.1
#-A POSTROUTING -d 192.168.1.3/32 -p tcp -m tcp --dport 27017 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.4/32 -p tcp -m tcp --dport 3306 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.6/32 -p tcp -m tcp --dport 6379 -j SNAT --to-source 192.168.1.1

-A POSTROUTING -d 192.168.1.10/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.7/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.8/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.12/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.13/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.11/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.1.1
COMMIT
# Completed on Fri Oct 21 15:26:56 2022
# Generated by iptables-save v1.6.1 on Fri Oct 21 15:26:56 2022
*filter
:INPUT ACCEPT [23197:2171941]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [22893:2148218]
-A FORWARD -j ACCEPT
COMMIT
# Completed on Fri Oct 21 15:26:56 2022
